--- a/DashBoardStyle.css
+++ b/DashBoardStyle.css
@@ -6,32 +6,34 @@ body{
   background-color: #d8d6d6
 }
 
-.topLayout  {
-  background-color:white!important
+#topLayout  {
+  background-color:white;
+  height: 70px;
+  /* border-bottom: 1px solid grey; */
 }
-.topLayout #navIcon{
+#topLayout #navIcon{
+  padding: 23px 33px;
   border-right:1px solid #d8d6d6;
-  padding: 23px 30px;
 }
-.topLayout #navIcon:active{
-  border: 1px dotted #333;
+#topLayout #navIcon:active{
+  /* border: 1px dotted #333; */
 }
-.topLayout #LNTLogo{
+#topLayout #LNTLogo{
   padding: 12px 10px;
 }
-.topLayout #LNTLogo:active{
-  border: 1px dotted #333;
+#topLayout #LNTLogo:active{
+  /* border: 1px dotted #333; */
 }
-.topLayout #lifePortalImage{
+#topLayout #lifePortalImage{
     margin-left: 590px;
     width: 140px;
     height: 50px;
     margin-bottom: 8px;
 }
 #sidebar{
-  display: block;
+  display: none;
   width: 20%;
-  height: 85%;
+  height: 90%;
   background: #3d464d;
   overflow: hidden;
   position: absolute;
@@ -69,9 +71,9 @@ hr {
   margin: 1.5em 0; padding: 0;
 }
 .naviconSpan:hover #sidebar{
-  display: block;
+  /* display: block; */
 }
-.topLayout #userImage{
+#topLayout #userImage{
   float: right;
   clear: right;
   border: 1px solid #222;
@@ -80,7 +82,7 @@ hr {
   margin-right: 40px;
   margin-top: 10px;
 }
-.topLayout .dropdownSpan{
+#topLayout .dropdownSpan{
   float: right;
   clear: right;
   margin-top: 10px;
@@ -118,31 +120,29 @@ hr {
   background-color: #007CC8;
 }
 .dropdownSpan:hover #dropdownmenu{
-  display: block;
+  /* display: block; */
 }
-.container-1{
-  margin-left: 20%
+#container-1{
+  /* margin-left: 20% */
 }
-.container-1 #text-dashboard{
+#container-1 #text-dashboard{
   font-family: monospace;
-  display: block;
-  padding-top: 10px;
   font-size: 13px;
   text-decoration:none;
   margin-left: 18px;
   color: #226198
 }
-.container-1 #announ{
+#container-1 #announ{
   font-family: monospace;
   margin-left: 28px;
   margin-top: 20px;
   color: #3d464d
 }
 
-.container-1 h4{
+#container-1 h4{
   height: 30px;
   padding-top: 5px;
-  margin-left: 26px;
+  margin-left: 25px;
   margin-right: 25px;
   text-align: center;
   color: white;
@@ -210,7 +210,9 @@ hr {
   }
 }
 #tabs{
-  padding: 30px 25px;
+  margin-top: 30px;
+  margin-left:25px;
+  margin-right:25px;
 }
 #tabs ul {
   list-style-type: none;
@@ -242,3 +244,35 @@ hr {
   color: white;
   background-color: #007CC8;
 }
+.tabsContainerDivision{
+  background: white;
+  margin-left:25px;
+  margin-right:25px;
+}
+.tabsContainerDivision div{
+  display: none;
+}
+/* .tabsContainerDivision #requestedTrainingDivision{
+  display: none;
+}
+.tabsContainerDivision #trainingCatalogDivision{
+  display: none;
+}
+.tabsContainerDivision #myLearningPlansDivision{
+  display: none;
+}
+.tabsContainerDivision #atlDivision{
+  display: none;
+}
+.tabsContainerDivision #idpDivision{
+  display: none;
+}
+.tabsContainerDivision #myCompletionsDivision{
+  display: none;
+}
+.tabsContainerDivision #myOnlineTestsDivision{
+  display: none;
+}
+.tabsContainerDivision #moocCoursesDivision{
+  display: none;
+} */
