LIFE PORTAL WEBSITE.
1.My training(tab) container completed.

2.created new files viewmore-html/css which is the layout for view more
button in the My training(tab) container.

3.when clicked on view more button it opens new HTML(viewmoreHTML).

4.In view more HTML layout few work pending.

files modified:
	mainPage.html
	mainPage.js

Added new files:
	viewmoreHTML.html
	viewmore.css

--- a/mainPage.css
+++ b/mainPage.css
@@ -220,7 +220,7 @@ hr {
   padding: 0;
   overflow: hidden;
   background-color: white;
-  border-bottom: 2px solid #007CC8;
+  border-bottom: 3px solid #007CC8;
 }
 #tabs li {
   float: left;
@@ -245,10 +245,51 @@ hr {
   background-color: #007CC8;
 }
 .tabsContainerDivision{
-  background: white;
+  height: 350px;
   margin-left:25px;
   margin-right:25px;
+  padding: 20px 20px;
+  background: white;
 }
 .tabsContainerDivision div{
   display: none;
+}
+#myTrainingDivision{
+  border-right: 1px solid #d8d6d6;
+  border-left: 1px solid #d8d6d6;
+}
+#myTrainingDivisionTable th{
+  padding: 8px;
+  height: 60px;
+  text-align: left;
+  color:white;
+  background-color: #4E565C;
+}
+#myTrainingDivisionTable tr{
+  height: 60px;
+}
+#myTrainingDivisionTable td{
+  font-family: monospace;
+  color: rgba(51, 51, 51);
+  font-size: 15.4px;
+  border-bottom: 1px solid #d8d6d6;
+  padding: 8px;
+}
+#myTrainingDivisionTable td a{
+  text-decoration: none;
+  color: #0070a8;
+}
+#viewmore{
+  display: block;
+  background: #00559E;
+  color: white;
+  text-decoration: none;
+  float: right;
+  padding: 5px 5px;
+  margin-top: 40px;
+}
+#viewmore:hover{
+  background: white;
+  color:#0070a8;
+  border: 1px solid #0070a8;
 }
