--- a/mainPage.css
+++ b/mainPage.css
@@ -5,7 +5,6 @@
 body{
   background-color: #d8d6d6
 }
-
 #topLayout  {
   background-color:white;
   height: 70px;
@@ -299,7 +298,6 @@ hr {
 #myLearningPlansDivision h5{
   color: #999;
   font-family: 'Source Sans Pro',sans-serif;
-
 }
 #myLearningPlansDivision p{
   background-color: #d9edf7;
@@ -366,6 +364,74 @@ hr {
   font-size: 13px;
   font-family: 'Source Sans Pro',sans-serif;
 }
+#mainModal {
+  display: none;
+  width: 30%;
+  height: 25%;
+  background: #eee;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  border: 1px solid #d6d6d6;
+}
+.modal-content #text1 {
+  background: white;
+  padding: 12px;
+  font-size: 14px;
+  border-bottom: 1px solid #d6d6d6;
+  font-family: monospace;
+}
+.modal-content #text2 {
+  color: #b94a48;
+  font-size: 14px;
+  padding: 10px;
+  font-family: 'Source Sans Pro',sans-serif;
+}
+.modal-content a {
+  float: right;
+  width: 20px;
+  height: 20px;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  font-size: 15px;
+  background: blue;
+  border-radius: 4px;
+}
+.modal-content select {
+  padding: 6px;
+  border-radius: 5px;
+  color: #666;
+}
+.modal-content button {
+  width: 80px;
+  height: 40px;
+  color: white;
+  background: #00559E;
+  margin-left: 180px;
+}
+.modal-content button:hover {
+  opacity: 0.8;
+}
+/* Add Zoom Animation */
+  .animate {
+  -webkit-animation: animatezoom 0.6s;
+  animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+  from {-webkit-transform: scale(0)}
+  to {-webkit-transform: scale(1)}
+}
+
+@keyframes animatezoom {
+  from {transform: scale(0)}
+  to {transform: scale(1)}
+}
+
 #myCompletionsDivision{
   width: 100%;
   border-right: 1px solid #d8d6d6;
